Logs/log.txt
ERROR > An Error Occured.
Traceback (most recent call last):
  File "/home/pi/.local/lib/python3.7/site-packages/discord/ext/commands/bot.py", line 596, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/pi/Bots/NightDragon/commands/mod.py", line 17
    embed.add_field(name=f"{member} Was Kicked By -", value=ctx.author.mention)
    ^
IndentationError: unexpected indent

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "bot.py", line 28, in <module>
    bot.load_extension(cog)
  File "/home/pi/.local/lib/python3.7/site-packages/discord/ext/commands/bot.py", line 653, in load_extension
    self._load_from_module_spec(spec, name)
  File "/home/pi/.local/lib/python3.7/site-packages/discord/ext/commands/bot.py", line 599, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'commands.mod' raised an error: IndentationError: unexpected indent (mod.py, line 17)
